# fastapi-thynne

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  README.md  bin  generate_prisma.py  pyproject.toml  requirements.txt  run.bat  settings.json  test.py  test_strawberry.py
prisma/: schema.prisma
src/: env.py  main.py
src/app/: env.py  main.py
src/app/api/: __init__.py  test.py
src/app/api/graphql/: __init__.py  factory.py  registry.py  security.py
src/app/api/graphql/accounts/: mutations.py  queries.py
src/app/api/graphql/licenses/: mutations.py  queries.py
src/app/api/graphql/product/: mutations.py  queries.py
src/app/api/graphql/products/: mutations.py  (+1 more)
src/app/core/: db.py
src/app/models/: schemas.py  user_schema.py
src/core/: db.py
src/models/: account.py  gql_types.py  license_schema.py  licenses_schema.py  product_schema.py  products_schema.py  user.py  user_schema.py  users_schema.py
src/modules/: base.py
src/modules/account/: model.py  repository.py
src/modules/license/: model.py  repository.py
src/modules/product/: model.py  repository.py
src/modules/user/: model.py  repository.py
src/prisma/: _compat.py  _fields.py  _raw_query.py  actions.py  bases.py  client.py  enums.py  errors.py  http_abstract.py  metadata.py  models.py  schema.prisma  types.py
src/prisma/_vendor/: lark_schema_parser.py  lark_schema_scan_parser.py
src/prisma/cli/: _node.py  prisma.py  utils.py
src/prisma/generator/: models.py
src/repository/: account_repo.py  shared.py  user_repo.py
src/utils/: license.py
tests/: verify_graphql.py
(+2 files in other folders)
