[project]
name = "fastapi-thynne"
version = "0.1.1"
description = "FastAPI backend project for Thynne"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ANN", "UP"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
lines-between-types = 1
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.bump_my_version]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"
